# burtorch

./: .gitignore  README.md  README_1_MIN_TOOLS.md  README_2_EXTRA_TOOLS.md  README_3_BUILD_LOCALLY.md  README_4_EXPERIMENTS.md  README_5_BUILTIN_GITHUB_ACTIONS.md
.github/workflows/: ci.yml
burt/: CMakeLists.txt
burt/bin_gpt_example/src/: main_gpt.cpp
burt/bin_makemore_example/src/: main_makemore.cpp
burt/bin_makemore_nlp_example/: CMakeLists.txt
burt/bin_small_example/: CMakeLists.txt
burt/bin_small_example/src/: main_small_graph.cpp
burt/bin_small_example_for_energy/: CMakeLists.txt
burt/bin_small_example_for_energy/src/: main_small_graph.cpp
burt/bin_small_example_loading/src/: main_small_graph_loading.cpp
burt/bin_small_example_saving/src/: main_small_graph_saving.cpp
burt/bin_small_graph_example/src/: main_small_graph.cpp
burt/bin_tests/: CMakeLists.txt
burt/bin_tests/src/: main.cpp
burt/bin_tests/src/burt_components/: BurtComponentsGTest.cpp
burt/bin_tests/src/burt_scalar/: BurtScalarGTest.cpp
burt/bin_tests/src/burt_simd/: BurtSimdGTest.cpp
burt/bin_tests/src/copier/: CopierGTest.cpp  DataGTest.cpp  MutableDataGTest.cpp
burt/bin_tests/src/fs/: FileNameHelpersGTest.cpp  FileSystemHelpersGTest.cpp
burt/bin_tests/src/linalg_vectors/: LightVectorNDGTest.cpp  VectorNDGTest.cpp  VectorSimdTraitsGTest.cpp
burt/bin_tests/src/math_routines/: SimpleMathRoutinesGTest.cpp
burt/bin_tests/src/random/: RandomGenIntegerLinearGTest.cpp  RandomGenMerseneGTest.cpp  RandomGenRealLinearGTest.cpp  RandomGenXorShiftGTest.cpp  RandomVariableGTest.cpp  ShuffleSequenceGTest.cpp
burt/bin_tests/src/system/: CrcGTest.cpp  Md5GTest.cpp  MutexGTest.cpp  SystemMemoryAllocateGTest.cpp  ThreadsGTest.cpp
burt/bin_tests/src/timers/: HiPrecTimerGTest.cpp
burt/bin_tiny_example/src/: main_tiny_graph.cpp
burt/burt/copylocal/: CMakeLists.txt
burt/burt/copylocal/include/: Copier.h  Data.h  MutableData.h
burt/burt/copylocal/src/: Data.cpp  MutableData.cpp
burt/burt/fs/include/: FileNameHelpers.h  FileSystemHelpers.h  StringUtils.h
burt/burt/fs/src/: FileNameHelpers.cpp  FileSystemHelpers.cpp
burt/burt/linalg_vectors/: CMakeLists.txt
burt/burt/linalg_vectors/include/: LightVectorND.h  VectorND_Raw.h
burt/burt/linalg_vectors/include_internal/: CppSimdWrapper.h  LightVector_SIMD_double.h  LightVector_SIMD_float.h  LightVector_SIMD_int.h  VectorND_Raw_SIMD_double.h  VectorND_Raw_SIMD_float.h  VectorND_Raw_SIMD_int.h  VectorSimdTraits.h
burt/burt/linalg_vectors/src/: VectorND_Raw.cpp
burt/burt/mathroutines/: CMakeLists.txt
burt/burt/mathroutines/include/: SimpleMathRoutines.h
burt/burt/random/: CMakeLists.txt
burt/burt/random/include/: MathStatistics.h  RandomGenCrt.h  RandomGenIntegerLinear.h  RandomGenMersenne.h  RandomGenRealLinear.h  RandomGenXorShiftInteger.h  RandomVariable.h  Shuffle.h
burt/burt/random/src/: RandomGenCrt.cpp  RandomGenIntegerLinear.cpp  RandomGenMersenne.cpp  RandomGenRealLinear.cpp  RandomGenXorShiftInteger.cpp  RandomVariable.cpp
burt/burt/system/: CMakeLists.txt
burt/burt/system/include/: CompilerInfo.h  CpuInfo.h  MemInfo.h  PlatformSpecificMacroses.h  ProcessInfo.h  SystemMemoryAllocate.h  Version.h.in
burt/burt/system/include/digest/: Crc.h  Md5.h
burt/burt/system/include/network/: Socket.h
burt/burt/system/include/threads/: Mutex.h  Semaphore.h  Thread.h
burt/burt/system/include/threads/impl/posix/: MutexPosix.h  SemaphorePosix.h  ThreadPosix.h
burt/burt/system/include/threads/impl/windows/: MutexWinApi.h  SemaphoreWinApi.h  ThreadWinApi.h
burt/burt/system/src/: CompilerInfo.cpp  CpuInfo.cpp  MemInfo.cpp  ProcessInfo.cpp  SystemMemoryAllocate.cpp
burt/burt/system/src/digest/: Crc.cpp  Md5.cpp
burt/burt/system/src/digest/impl/: Md5Impl.cpp
burt/burt/system/src/network/: Socket.cpp
burt/burt/system/src/threads/: Mutex.cpp  Sempahore.cpp  Thread.cpp
burt/burt/system/src/threads/impl/posix/: MutexPosix.cpp  SemaphorePosix.cpp  ThreadPosix.cpp
burt/burt/system/src/threads/impl/windows/: MutexWinApi.cpp  SemaphoreWinApi.cpp  ThreadWinApi.cpp
burt/burt/timers/include/: BaseTimer.h  HighPrecisionTimer.h
burt/burt/timers/include/linux/: ClockGetTime.h  GetTimeOfDayTimer.h
burt/burt/timers/include/windows/: HiPrecOueryPerfomanceTimer.h
burt/burt/timers/src/: BaseTimer.cpp
burt/burt/timers/src/linux/: ClockGetTime.cpp  GetTimeOfDayTimer.cpp
burt/burt/timers/src/windows/: HiPrecOueryPerfomanceTimer.cpp
burt/burtcore/: CMakeLists.txt
burt/burtcore/include/: burtorch.h  burtorch_array4node.h  burtorch_backward_dispatch.h  burtorch_config.h  burtorch_help_vistools_with_py.h  burtorch_mlp.h  burtorch_mlp_layer.h  burtorch_mlp_layer_compile_time.h  burtorch_mlp_neuron.h  burtorch_mlp_neuron_compile_time.h  burtorch_mlp_neuron_enums.h  burtorch_node.h  burtorch_op_metainfo.h  burtorch_op_types.h  burtorch_operations.h  burtorch_special_copy.h  micrograd_statistics.h
burt/scripts/: project_scripts.py
burt/scripts/cmake/: DoptVersionGit.cmake  HelpFunctions.cmake  ToolChainConfiguration.cmake
burt/scripts/doxygen/: doxygen.conf  doxygen_generate.py
experiments/exp1_tiny_example/: check_empty_loop.py  example_autograd.py  example_jax_eager.py  example_jax_jit.py  example_micrograd.py  example_mlx.py  example_tf_eager_mode.py  example_tf_graph_mode.py  example_tf_lite_graph_mode.py  example_tf_lite_graph_mode_invoke.py  example_torch.py  example_torch_gpu.py  example_torch_jit.py
experiments/exp2_small_example/: check_empty_loop.py  example_autograd.py  example_jax_eager.py  example_jax_jit.py  example_micrograd.py  example_tf_eager_mode.py  example_tf_graph_mode.py  example_tf_lite_graph_mode.py  example_tf_lite_graph_mode_invoke.py  example_torch.py  example_torch_gpu.py  example_torch_jit.py
experiments/exp3_small_example_loading/: example_tf_eager_mode.py  example_tf_graph_mode.py  example_torch.py  example_torch_jit.py  example_torch_native_load.py
experiments/exp4_small_example_saving/: example_tf_eager_mode.py  example_tf_graph_mode.py  example_torch.py  example_torch_jit.py  (+1 more)
(+65 files in other folders)
